welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:17: error: not found: value couleurSol
return couleurSol
       ^