welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var faceBave = false
	if (estFaceMur == true) {
    gauche()
  }
  else{
    avance()
    if (getCouleurSol == Color.green) {
      faceBave = true
      recule()
    }
    else {
      gauche()
    }
  }
return couleurSol
}